Fix vertical alignment within cells in demo

--- a/index.css
+++ b/index.css
@@ -37,7 +37,12 @@ body {
     text-align: justify;
 }
 
+th {
+    vertical-align: top;
+}
+
 td {
+    vertical-align: top;
     cursor: pointer;
 }
 
